--- a/app/globals.css
+++ b/app/globals.css
@@ -190,3 +190,68 @@ html { scroll-behavior: smooth; }
 .animate-cards{
   animation: cards 5s linear infinite;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* animation: {
+  marquee: "marquee var(--duration) linear infinite", 
+  "marquee-vertical": "marquee-vertical var(--duration) linear infinite", 
+}, 
+keyframes: { 
+  marquee: { 
+    from: { transform: "translateX(0)" }, 
+    to: { transform: "translateX(calc(-100% - var(--gap)))" }, 
+  }, 
+  "marquee-vertical": { 
+    from: { transform: "translateY(0)" }, 
+    to: { transform: "translateY(calc(-100% - var(--gap)))" }, 
+  }, */
+
+
+
+  @keyframes marquee {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  
+  @keyframes marquee-vertical {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(calc(-100% - var(--gap)));
+    }
+  }
+  
+  .animate-marquee {
+    animation: marquee var(--duration) linear infinite;
+  }
+  
+  .animate-marquee-vertical {
+    animation: marquee-vertical var(--duration) linear infinite;
+  }
